mocha/apps/netbird/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbird
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - netbird.mocha.thoughtless.eu
      secretName: netbird-tls
  rules:
    - host: netbird.mocha.thoughtless.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: netbird-management
                port:
                  number: 80
          - path: /management
            pathType: Prefix
            backend:
              service:
                name: netbird-management
                port:
                  number: 80
          - path: /signalexchange
            pathType: Prefix
            backend:
              service:
                name: netbird-signal
                port:
                  number: 80
          - path: /relay
            pathType: Prefix
            backend:
              service:
                name: netbird-relay
                port:
                  number: 33080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbird-dashboard
                port:
                  number: 80
